@@ -98,7 +98,7 @@ static struct Multi_Int32 invalidFilePixelDataNode;
 static int	invalidFilePixelData[] = {1,1,3,0x707070};
 
 /* threading variables for loading textures in threads */
-static pthread_t loadThread = NULL;
+static pthread_t loadThread = 0;
 static pthread_mutex_t texmutex = PTHREAD_MUTEX_INITIALIZER;
 static pthread_cond_t texcond   = PTHREAD_COND_INITIALIZER;
 static pthread_mutex_t genmutex = PTHREAD_MUTEX_INITIALIZER;
@@ -173,7 +173,7 @@ void readpng_cleanup(int free_image_data);
 /************************************************************************/
 /* start up the texture thread */
 void initializeTextureThread() {
-	if (loadThread == NULL) {
+	if (loadThread == 0) {
 		pthread_create (&loadThread, NULL, (void*(*)(void *))&_textureThread, NULL);
 	}
 }
@@ -826,7 +826,7 @@ void do_possible_textureSequence(struct textureTableIndexStruct* me) {
 	struct X3D_MovieTexture *mt;
 	struct X3D_ImageTexture *it;
 	GLint Src, Trc;
-	char *mytexdata;
+	unsigned char *mytexdata;
 
 
 	/* see if we need to get the max texture size at runtime */
